--- a/ViBE-web-application/src/index.html
+++ b/ViBE-web-application/src/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
   
-  <app-root><script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC7U3s7wXORfvcjAoguRtiGgQb9BkS-KWc"></script></app-root>
+  <app-root>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC7U3s7wXORfvcjAoguRtiGgQb9BkS-KWc"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7U3s7wXORfvcjAoguRtiGgQb9BkS-KWc&libraries=visualization">
+</script>
+  </app-root>
 </body>
 </html>
