--- a/ViBE-web-application/src/index.html
+++ b/ViBE-web-application/src/index.html
@@ -18,10 +18,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   
   <app-root>
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAIBbfCLpm3xcgJF3dqpdOAoEPwdH7ajQI"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIBbfCLpm3xcgJF3dqpdOAoEPwdH7ajQI&libraries=visualization"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIBbfCLpm3xcgJF3dqpdOAoEPwdH7ajQI&libraries=places&language=en"></script>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIBbfCLpm3xcgJF3dqpdOAoEPwdH7ajQI&libraries=visualization,places&language=en"></script>
   </app-root>
 </body>
 
